Pruebas de profile

--- a/stepx/src/main/resources/templates/profile.html
+++ b/stepx/src/main/resources/templates/profile.html
@@ -51,7 +51,7 @@
           <div class="profile-sidebar bg-gray p-4 rounded-3">
             <div class="profile-image text-center mb-4">
               <div class="image-wrapper mb-3">
-                <img src="{{image}}" alt="Profile Picture" class="rounded-circle" style="width: 150px; height: 150px; object-fit: cover;">
+                <img src="/id/imageUser" alt="Profile Picture" class="rounded-circle" style="width: 150px; height: 150px; object-fit: cover;">
               </div>
               <button class="btn btn-outline-dark btn-sm">Change Photo</button>
             </div>
@@ -78,11 +78,11 @@
               <div class="row">
                 <div class="col-md-6 mb-3">
                   <label class="form-label">First Name</label>
-                  <input type="text" class="form-control" name="firstName" value="{{firstName}}">
+                  <input type="text" class="form-control" name="firstName" value="">
                 </div>
                 <div class="col-md-6 mb-3">
                   <label class="form-label">Last Name</label>
-                  <input type="text" class="form-control" name="lastName" value="{{lastName}}">
+                  <input type="text" class="form-control" name="lastName" value="">
                 </div>
                 <div class="col-md-6 mb-3">
                   <label class="form-label">Username</label>
