name and Lastname for user

--- a/stepx/src/main/resources/templates/register-user.html
+++ b/stepx/src/main/resources/templates/register-user.html
@@ -56,6 +56,15 @@
                 <input type="text" id="username" name="username" class="form-control ps-3 text-input" required>
                 
               </div>
+              <div class="mb-3">
+                <label for="firstName" class="form-label">First Name</label>
+                <input type="text" id="firstName" name="firstName" class="form-control ps-3 text-input" required>
+                
+              </div>
+              <div class="mb-3">
+                <label for="lastName" class="form-label">Last Name</label>
+                <input type="text" id="lastName" name="lastName" class="form-control ps-3 text-input" required>
+              </div>
 
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
@@ -70,7 +79,7 @@
 
               <div class="mb-3">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" class="form-control ps-3 text-input">
+                <input type="password" id="password" name="password" class="form-control ps-3 text-input"required>
               </div>
 
               <div class="d-grid gap-2 mt-4">
