--- a/stepx/src/main/resources/templates/partials/quick-view-cart-modal.html
+++ b/stepx/src/main/resources/templates/partials/quick-view-cart-modal.html
@@ -54,7 +54,7 @@
 
 {{^empty}}
   <div class="modal-footer border-0 justify-content-center px-0">
-    <a href="/checkout/1" class="w-100">
+    <a href="/checkout/user" class="w-100">
       <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep w-100">
         Checkout
       </button>
