--- a/stepx/src/main/resources/templates/partials/checkout-itemsList.html
+++ b/stepx/src/main/resources/templates/partials/checkout-itemsList.html
@@ -39,7 +39,7 @@
                     <span class="fw-bold">{{price}}</span>
                 </div>
                 <!--delete product button in checkout-->
-                <button class="btn btn-link text-danger p-0 mb-2" onclick="deleteItemfromCart('{{id_orderItem}}','1')">
+                <button class="btn btn-link text-danger p-0 mb-2" onclick="deleteItemfromCart('{{id_orderItem}}')">
                     <svg class="close" width="16" height="16">
                         <use xlink:href="#close"></use>
                     </svg>
@@ -58,7 +58,7 @@
 </div>
 
 {{#setSubtotal}} 
-<button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100" onclick="recalculate(1)">Recalculate</button>
+<button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100" onclick="recalculate()">Recalculate</button>
 {{/setSubtotal}}
 <!-- total -->
 <div class="mt-4 pt-4 border-top">
