--- a/stepx/src/main/resources/templates/index.html
+++ b/stepx/src/main/resources/templates/index.html
@@ -119,7 +119,7 @@
               </div>
               <div class="card-detail d-flex justify-content-between align-items-center mt-3">
                 <h3 class="card-title fs-6 fw-normal m-0">
-                  <a href="">{{name}}</a>
+                  <a href="/shop/single-product/{{id}}">{{name}}</a>
                 </h3>
                 <span class="card-price fw-bold">${{price}}</span>
               </div>
