--- a/stepx/src/main/resources/templates/checkout.html
+++ b/stepx/src/main/resources/templates/checkout.html
@@ -13,6 +13,9 @@
   <meta name="keywords" content="Online Store">
   <meta name="description" content="Stylish - Shoes Online Store HTML Template">
 
+  <meta name="_csrf" content="{{token}}"/>
+  <meta name="_csrf_header" content="{{headerName}}"/>
+  
   <link rel="stylesheet" href="/css/vendor.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 
