recalculate, delete and change profile picture

--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -190,8 +190,8 @@
                 {{#review}}
                 <div class="col-lg-6 d-flex flex-wrap"> <!-- All the container for 1 review -->
                   <div class="col-md-2 me-3 mb-3">
-                    <div class="image-holder">
-                      <img src="/shop/{{user.id}}/imageUser" alt="review" class="img-fluid">
+                    <div class="image-wrapper mb-3">
+                      <img src="/shop/{{user.id}}/imageUser" alt="review" class="rounded-circle" style="width: 75px; height: 75px; object-fit: cover;">
                     </div>
                   </div>
                   <div class="col-md-8">
