--- a/stepx/src/main/resources/templates/profile.html
+++ b/stepx/src/main/resources/templates/profile.html
@@ -11,8 +11,10 @@
   <meta name="author" content="TemplatesJungle">
   <meta name="keywords" content="Online Store, Profile">
   <meta name="description" content="Profile Settings - Stylish Shoes Online Store">
+
   <meta name="_csrf" content="{{token}}"/>
   <meta name="_csrf_header" content="{{headerName}}"/>
+  
   <link rel="stylesheet" href="/css/vendor.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -51,10 +53,14 @@
         <div class="col-lg-3">
           <div class="profile-sidebar bg-gray p-4 rounded-3">
             <div class="profile-image text-center mb-4">
-              <div class="image-wrapper mb-3">
+              <div class="image-wrapper mb-3" id="user-image">
                 <img src="/shop/{{user_id}}/imageUser" alt="Profile Picture" class="rounded-circle" style="width: 150px; height: 150px; object-fit: cover;">
               </div>
-              <button class="btn btn-outline-dark btn-sm">Change Photo</button>
+              <form>
+                <input type="file" id="photoInput" style="display: none;" accept="image/*">
+                <button type="button" onclick="handleChangePhoto()" class="btn btn-outline-dark btn-sm">Change Photo</button>
+              </form>
+             
             </div>
             <div class="profile-nav">
               <ul class="list-unstyled">
