--- a/stepx/src/main/resources/templates/admin-pannel.html
+++ b/stepx/src/main/resources/templates/admin-pannel.html
@@ -78,7 +78,7 @@
 
     <main class="content">
         <div class="container-fluid p-0">
-            <h1 class="h3 mb-3"><strong>Analytics</strong> Dashboard</h1>
+            <h1 class="h3 mb-3"><strong>Analytics Dashboard</strong> </h1>
 
             <div class="row">
                 <div class="d-flex">
@@ -97,18 +97,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <h1 class="mt-1 mb-3">2.382</h1>
-                                        <div class="mb-0">
-                                            <span class="text-danger"> <i class="mdi mdi-arrow-bottom-right"></i> -3.65% </span>
-                                            <span class="text-muted">Since last week</span>
-                                        </div>
+                                        <h1 class="mt-1 mb-3">${{totalMoneyGained}}</h1>
+                                        
                                     </div>
                                 </div>
                                 <div class="card">
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col mt-0">
-                                                <h5 class="card-title">Visitors</h5>
+                                                <h5 class="card-title">Registered Users</h5>
                                             </div>
                                             <div class="col-auto">
                                                 <div class="stat text-primary">
@@ -116,10 +113,9 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <h1 class="mt-1 mb-3">14.212</h1>
+                                        <h1 class="mt-1 mb-3">{{userCount}}</h1>
                                         <div class="mb-0">
-                                            <span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i> 5.25% </span>
-                                            <span class="text-muted">Since last week</span>
+                                         
                                         </div>
                                     </div>
                                 </div>
@@ -129,19 +125,16 @@
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col mt-0">
-                                                <h5 class="card-title">Earnings</h5>
+                                                <h5 class="card-title">Number of products</h5>
                                             </div>
                                             <div class="col-auto">
                                                 <div class="stat text-primary">
-                                                    <i class="align-middle" data-feather="dollar-sign"></i>
+                                                    <i class="align-middle" data-feather="shopping-bag"></i>
                                                 </div>
                                             </div>
                                         </div>
-                                        <h1 class="mt-1 mb-3">8999</h1>
-                                        <div class="mb-0">
-                                            <span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i> 6.65% </span>
-                                            <span class="text-muted">Since last week</span>
-                                        </div>
+                                        <h1 class="mt-1 mb-3">{{shoeCount}}</h1>
+                                       
                                     </div>
                                 </div>
                                 <div class="card">
@@ -156,11 +149,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <h1 class="mt-1 mb-3">64</h1>
-                                        <div class="mb-0">
-                                            <span class="text-danger"> <i class="mdi mdi-arrow-bottom-right"></i> -2.25% </span>
-                                            <span class="text-muted">Since last week</span>
-                                        </div>
+                                        <h1 class="mt-1 mb-3">{{processedOrderCount}}</h1>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -225,7 +215,7 @@
             const section = document.createElement('div');
             section.className = 'row';
             section.innerHTML = `
-                <div class="col-xl-6 col-xxl-7">
+                <div>
                     <div class="card flex-fill">
                         <div class="card-header">
                             <h5 class="card-title mb-0">Shoe Orders by Month</h5>
