Message Error For Forbidden Access

--- a/stepx/src/main/resources/templates/index.html
+++ b/stepx/src/main/resources/templates/index.html
@@ -36,6 +36,11 @@
 
 <body>
   {{>header}}
+
+  {{#showError}}
+    {{>partials/error-page}}
+{{/showError}}
+
   <section id="intro" class="position-relative mt-4">
     <div class="container-lg">
       <div class="swiper main-swiper">
