--- a/stepx/src/main/resources/templates/index.html
+++ b/stepx/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="/css/vendor.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
-
+  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -22,14 +22,84 @@
     rel="stylesheet">
 
   <style>
-    html,
-    body {
-      overflow-x: hidden;
-      margin: 0;
-      /* Eliminar márgenes predeterminados */
-      padding: 0;
-      /* Eliminar relleno predeterminado */
+    .product-store .swiper-container {
       width: 100%;
+      overflow: hidden;
+      position: relative;
+      padding: 0 40px;
+    }
+  
+    .product-store .swiper-wrapper {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      box-sizing: content-box;
+    }
+  
+    .product-store .swiper-slide {
+      flex-shrink: 0;
+      width: auto;
+      height: 100%;
+      position: relative;
+    }
+  
+    .product-store .product-card {
+      width: 100%;
+      max-width: 100%;
+      margin: 0 auto;
+    }
+  
+    .product-store .card-img {
+      width: 100%;
+      overflow: hidden;
+    }
+  
+    .product-store .product-image {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+  
+    .product-store .swiper-navigation {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      transform: translateY(-50%);
+      z-index: 10;
+    }
+  
+  
+    .product-store .swiper-button-prev,
+    .product-store .swiper-button-next {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 35px;
+      height: 35px;
+      background-color: transparent;
+      box-shadow: none;
+    }
+  
+    .product-store .swiper-button-prev:after,
+    .product-store .swiper-button-next:after {
+      font-size: 24px;
+      color: #ff0000;
+      font-weight: bold;
+    }
+  
+  
+  
+    .product-store .swiper-button-prev {
+      left: 0;
+    }
+  
+    .product-store .swiper-button-next {
+      right: 0;
+    }
+
+    .product-store .swiper-button-prev:hover:after,
+    .product-store .swiper-button-next:hover:after {
+      color: #cc0000;
     }
   </style>
 </head>
@@ -221,6 +291,7 @@
             {{/recommendedShoes}}
           </div>
         </div>
+        
         <!-- Contenedor para los botones de navegación -->
         <div class="swiper-navigation">
           <div class="swiper-button-prev"></div>
@@ -247,27 +318,9 @@
   {{>footer}}
   <script src="/js/jquery-1.11.0.min.js"></script>
   <script src="/js/plugins.js"></script>
-  <script src="/js/script.js"></script>>
+  <script src="/js/script.js"></script>
+  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script src="/js/index.js"></script>
 </body>
-
-<script>
-  var swiper = new Swiper('.swiper-container', {
-    slidesPerView: 5,  // Muestra solo 5 productos a la vez
-    spaceBetween: 20,  // Espacio entre productos (ajusta según diseño)
-    loop: false,  // Evita el scroll infinito
-    navigation: {
-      nextEl: '.swiper-button-next',
-      prevEl: '.swiper-button-prev'
-    },
-    loop: false, // Evita que el carrusel vuelva al inicio automáticamente
-    breakpoints: {
-      320: { slidesPerView: 1 },  // Móvil: 1 producto a la vez
-      576: { slidesPerView: 2 },  // Tablets pequeñas: 2 productos
-      768: { slidesPerView: 3 },  // Tablets grandes: 3 productos
-      992: { slidesPerView: 4 },  // Pantallas medianas: 4 productos
-      1200: { slidesPerView: 5 }  // Pantallas grandes: 5 productos
-    }
-  });
-</script>
 
 </html>
