--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -211,11 +211,15 @@
                           <span class="review-date">{{formattedDate}}</span>
                         </div>
                         <p id="textReview">{{description}}</p>
-                        <button id="deleteReviewButton" onclick="deleteReview('{{shoe.id}}','{{id}}')">
-                          <i class="fa-solid fa-trash"></i>
-                        </button>
+
                       </div>
+                      {{#admin}}
+                      <button id="deleteReviewButton" onclick="deleteReview('{{shoe.id}}','{{id}}')" style="padding-top: 30px;">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                      {{/admin}}
                     </div>
+
                   </div>
                   {{/review}}
                 </div>
